Fixed images not showing up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/Profile Image.jpeg" alt="" /></span>
+					<span class="image avatar"><img src="Images/Profile Image.jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Alexander Forde</a></h1>
 					<p>I am an aspriring Software Developer<br />
 					That is Currently working on Becoming a Master of React/Redux</p>
@@ -44,7 +44,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/Portfolio Header.jpg" alt="" />
+									<img src="Images/Portfolio Header.jpg" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -75,7 +75,7 @@
 									<p>Below are the list of projects that I have Collaborated on or worked on Solo.</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/Tipsy Tea Image.png" alt="" /></a>
+											<a href="#" class="image"><img src="Images/Tipsy Tea Image.png" alt="" /></a>
 											<div class="inner">
 												<h4>Tipsy Tea</h4>
 												<p>Tipsy Tea is a Front-end Website that randomizes a combination of food and drinks from two different API's for a User.</p>
@@ -86,7 +86,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/Memory Game Pic.png" alt="" /></a>
+											<a href="#" class="image"><img src="Images/Memory Game Pic.png" alt="" /></a>
 											<div class="inner">
 												<h4>Memory Game</h4>
 												<p>The Memory Game is a React Application that the goal of the App is two get two matching symbols to win.</p>
