--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 												<h4>Memory Game</h4>
 												<p>The Memory Game is a React Application that the goal of the App is two get two matching symbols to win.</p>
 												<h5>Tech Stacks</h5>
-												<p>HTML, CSS, JavaScript, ReactJS,</p>
+												<p>HTML, CSS, JavaScript, React,</p>
 												<a href="https://aforde2.github.io/MemoryGame/"> Click Here to View App</a></p>
 											</div>
 										</article>
@@ -99,9 +99,9 @@
 											<a href="#" class="image"><img src="Images/Weather App.png" alt="" /></a>
 											<div class="inner">
 												<h4>Weather App</h4>
-												<p>The Weather App was an application created using React that gives you the weather for any city that you type into the search bar</p>
+												<p>The Weather App was an application created using React that gives you the weather for any city that you type into the search bar.</p>
 												<h5>Tech Stacks</h5>
-												<p>HTML, CSS, JavaScript, ReactJS, React Bootstrap</p>
+												<p>HTML, CSS, JavaScript, React, React Bootstrap</p>
 												<a href="https://aforde2.github.io/Weather-App/"> Click Here to View App</a></p>
 											</div>
 										</article>
