--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
 									<br> 
 									404-671-5748
 									<br>
+									<a href="Images/Alexander Forde Resume Web Development 1.pdf">Resume</a>
+									<br>
 									<a href="https://github.com/Aforde2">Github</a>
 									<br>
 									<a href="https://www.linkedin.com/in/alexander-forde/">Linkedin Profile</a>
